--- a/src/components/forum/Common/Common.css
+++ b/src/components/forum/Common/Common.css
@@ -18,18 +18,23 @@
 
 .result-content {
   font-size: 14px;
+  line-height:1.3em;
+  height: 5.2em !important;
   overflow: hidden;
   width: 90%;
-  height: 80px;
-  font-family: 'Microsoft YaHei', sans-serif;
+  display: -webkit-box;
+  -ms-word-wrap: break-word;
+  word-wrap: break-word;
+ -ms-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
 
 .search-result-tab {
-  box-shadow: 2px 2px 10px #cacaca;
   width: 100%;
   position: relative;
   padding: 15px 15px 15px 15px;
-  margin-top:15px;
 }
 
 .availabel-label {
